<resources>
    <string name="app_name">PhileTipTip</string>
    <string name="home">Home</string>
    <string name="weiter">Weiter</string>
    <string name="erfasstext">Bitte erfassen Sie den Schädlingsbefall oder Unkrautbewuchs.</string>
    <string name="willkommentext">Willkommen bei PhileTipTip</string>
    <string name="logo_description">PhileTipTip Logo</string>
    <string name="impressum">Impressum</string>
    <string name="datenschutz">Datenschutz</string>
    <string name="kontakt">Kontakt</string>
    <string name="datenverarbeitung">3. Datenverarbeitung</string>
    <string name="datenerhebung">2. Datenerhebung</string>
    <string name="allgemeines">1. Allgemeines</string>
    <string name="kontakttext">Bitte nutzen Sie dieses Kontaktformular nur bei Fragen und Anregungen zur App PhileTipTip. Meldungen die Grünflächen betreffen senden Sie bitte über den dafür vorgesehenen Prozess ab. Andere Anfragen richten Sie bitte an die dafür zuständigen Kontaktpersonen im Immobilienmanagement.</string>
    <string name="adressText">Bitte geben Sie die Adresse des Befalls/Bewuchses ein. Sie können alternativ auch die GPS Funktion nutzen.</string>
    <string name="strasse">Straße</string>
    <string name="hausnummer">Hausnummer</string>
    <string name="postleitzahl">Postleitzahl</string>
    <string name="ort">Ort</string>
    <string name="zurueck">Zurück</string>
    <string name="fototext">Bitte machen Sie ein Foto auf dem man den Befall/den Bewuchs möglichst deutlich erkennen kann. Sie können auch ein aussagekräftiges Bild aus Ihrer Gallerie auswählen oder diesen Punkt überspringen. Je besser dieses Bild ist, desto besser können sich unsere Außendienstmitarbeiter auf den Einsatz vorbereiten.</string>
    <string name="prueftext">Bitte überprüfen Sie Ihre Angaben. Sie können zu jedem der Schritte zurückkehren um die Angaben zu korrigieren.</string>
    <string name="meldungtext">Ihre Meldung</string>
    <string name="nachricht_bearbeiten">Nachricht bearbeiten</string>
    <string name="bild_bearbeiten">Bild bearbeiten</string>
    <string name="best_tigen">Bestätigen</string>
    <string name="beispieltext">Starker Unkrautbewuchs neben dem Zugangsweg</string>
    <string name="beispieladresse">Straße 123\nHausnummer 45\n12345 Beispielstadt</string>

    <string-array name="options_array">
        <item>Sonstige</item>
        <item>Schädlingsbefall</item>
        <item>Unkrautbewuchs</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>