<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/phileGreen"
    android:id="@+id/pruefen_main"
    android:orientation="vertical"
    tools:context=".PruefenActivity">

    <!-- Home Button -->
    <ImageButton
        android:id="@+id/button_home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:padding="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/home"
        android:contentDescription="Home" />

    <!-- Textblock -->
    <TextView
        android:id="@+id/text_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:text="@string/prueftext"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <!-- Bereich für die Adresse und den Icon Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Dummy-Adresse -->
        <TextView
            android:id="@+id/text_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beispieladresse"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Adresse bearbeiten Icon Button -->
        <ImageButton
            android:id="@+id/button_edit_address"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/edit"
            android:contentDescription="Adresse bearbeiten" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Dummy-Adresse -->
        <TextView
            android:id="@+id/text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beispieltext"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Adresse bearbeiten Icon Button -->
        <ImageButton
            android:id="@+id/button_edit_message"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/edit"
            android:contentDescription="@string/nachricht_bearbeiten" />
    </LinearLayout>

    <!-- Bereich für das Bild und den Icon Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Bild mit Rand -->
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/placeholder" />
        </FrameLayout>

        <!-- Bild bearbeiten Icon Button -->
        <ImageButton
            android:id="@+id/button_edit_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/imageedit"
            android:contentDescription="@string/bild_bearbeiten" />
        <!-- Zentrierter Icon Button -->
        <ImageButton
            android:id="@+id/button_submit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/best_tigen"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/submit" />
    </LinearLayout>


    <!-- Icon Buttons für Zurück und Weiter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <!-- Zurück Button -->
        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/zurueck"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/zurueck" />
    </LinearLayout>

</LinearLayout>
